--- a/策略组.conf
+++ b/策略组.conf
@@ -30,7 +30,7 @@ update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/h
 [Rule]
 # 广告拦截
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,🛑 广告拦截
-
+RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/StatisticsBlock.list,REJECT
 # 苹果服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,🍎 苹果服务
 
