--- a/策略组.conf
+++ b/策略组.conf
@@ -1,5 +1,4 @@
-# Shadowrocket Enhanced Auto-Speed Mode - 2025-08-30
-
+# Shadowrocket: 2025-08-31 10:32:08
 [General]
 bypass-system = true
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
@@ -21,7 +20,7 @@ update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/h
 📱 社交平台 = select, 🌐 国外服务, 🚀 节点选择, DIRECT
 🎬 流媒体 = select, 🌐 国外服务, 🇸🇬 新加坡, 🇯🇵 日本节点, 🇺🇸 美国节点, 🇬🇧 英国节点, use=true, policy-select-name=🌐 国外服务
 🎮 游戏平台 = select, 🌐 国外服务, 🚀 节点选择
-💻 开发平台 = select, 🌐 国外服务, 🚀 节点选择, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点
+💻 开发平台 = select, 🌐 国外服务, 🚀 节点选择
 🍎 苹果服务 = select, 🌏 国内服务, 🚀 节点选择
 📰 新闻阅读 = select, 🌐 国外服务, 🚀 节点选择
 🎯 全球直连 = select, DIRECT
@@ -64,7 +63,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 
 # 开发平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 开发平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,🇺🇸 美国节点
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,💻 开发平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,💻 开发平台
 
 # 国外服务
