--- a/策略组.conf
+++ b/策略组.conf
@@ -1,51 +1,37 @@
-# Shadowrocket: 2025-08-31 15:42:05
+# Shadowrocket: 2025-09-01 08:34:00
 [General]
 bypass-system = true
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
-dns-server = system,223.5.5.5,119.29.29.29,1.1.1.1,8.8.8.8
-doh-server = https://223.5.5.5/dns-query,https://1.1.1.1/dns-query
+dns-server = 223.5.5.5,119.29.29.29
+doh-server = https://1.1.1.1/dns-query,https://8.8.8.8/dns-query
 fallback-dns-server = 1.0.0.1,8.8.4.4
-always-reject = true
 icmp-auto-reply = true
 update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/heads/main/%E7%AD%96%E7%95%A5%E7%BB%84.conf
 
 [Proxy Group]
 # 国内外大分类
-🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, DIRECT
+🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
 🔯 自动选择 = url-test, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点, url=http://www.gstatic.com/generate_204,interval=300,tolerance=100
-🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
+🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点
 🌏 国内服务 = select, DIRECT
 
 # 功能分类
 📱 社交平台 = select, 🌐 国外服务, 🚀 节点选择, DIRECT
-🎬 流媒体 = select, 🌐 国外服务, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇺🇸 美国节点, 🇬🇧 英国节点,use=true,policy-select-name=🌐 国外服务
 🎮 游戏平台 = select, 🌐 国外服务, 🚀 节点选择
+🎬 流媒体 = select, 🌐 国外服务, 🇸🇬 新加坡, 🇯🇵 日本节点, 🇺🇸 美国节点, 🇬🇧 英国节点
+📺 国内流媒体 = select, 🌏 国内服务, DIRECT
 💻 开发平台 = select, 🌐 国外服务, 🚀 节点选择
-🍎 苹果服务 = select, 🌏 国内服务, 🚀 节点选择
+🍎 苹果服务 = select, 🌏 国内服务, DIRECT, 🌐 国外服务
 📰 新闻阅读 = select, 🌐 国外服务, 🚀 节点选择
-🎯 全球直连 = select, DIRECT
 🛑 广告拦截 = select, REJECT
 
 [Rule]
 
-# 1️⃣ 广告拦截
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,🛑 广告拦截
-DOMAIN-SUFFIX,ad.com,REJECT
-
-# 国内广告兜底
-DOMAIN-SUFFIX,adsmogo.com,REJECT
-DOMAIN-SUFFIX,admaster.com.cn,REJECT
-DOMAIN-SUFFIX,adsame.com,REJECT
-DOMAIN-SUFFIX,mobads.baidu.com,REJECT
-DOMAIN-SUFFIX,ads.pengyou.com,REJECT
-DOMAIN-SUFFIX,ads.qq.com,REJECT
-DOMAIN-SUFFIX,ad.360.cn,REJECT
-DOMAIN-SUFFIX,ad.tanx.com,REJECT
-DOMAIN-SUFFIX,ad.union.tanx.com,REJECT
-DOMAIN-SUFFIX,ad.api.3g.qq.com,REJECT
+# 1️⃣ 国内隐私/广告增强黑名单
+RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket-Blocklists/main/ChinaPrivacyAds.list,🛑 广告拦截
 
 # 2️⃣ 苹果服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,🍎 苹果服务
+RULE-SET,https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/main/Apple_Activation.list,🍎 苹果服务
 
 # 3️⃣ 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
@@ -64,6 +50,17 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Pandora/Pandora.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🇺🇸 美国节点
 
+# 4️⃣1️⃣ 国内流媒体服务
+DOMAIN-SUFFIX,iqiyi.com,📺 国内流媒体
+DOMAIN-SUFFIX,letv.com,📺 国内流媒体
+DOMAIN-SUFFIX,sohu.com,📺 国内流媒体
+DOMAIN-SUFFIX,youku.com,📺 国内流媒体
+DOMAIN-SUFFIX,bilibili.com,📺 国内流媒体
+DOMAIN-SUFFIX,mgtv.com,📺 国内流媒体
+DOMAIN-SUFFIX,acfun.cn,📺 国内流媒体
+DOMAIN-SUFFIX,fun.tv,📺 国内流媒体
+DOMAIN-SUFFIX,baofeng.com,📺 国内流媒体
+
 # 5️⃣ 社交平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📱 社交平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,📱 社交平台
@@ -75,7 +72,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 
 # 7️⃣ 开发平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 开发平台
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,🇺🇸 美国节点
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/OpenAI/OpenAI.list,🌐 国外服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,💻 开发平台
 
 # 8️⃣ 其他国外服务
