--- a/策略组.conf
+++ b/策略组.conf
@@ -1,4 +1,4 @@
-# Shadowrocket: 2025-09-09 01:19:13
+# Shadowrocket: 2025-09-16 13:06:48
 [General]
 include = 无
 bypass-system = true
@@ -107,8 +107,8 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # 开发平台（含 OpenAI）
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 开发平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,💻 开发平台
-DOMAIN-KEYWORD,openai.com,🇸🇬 新加坡直连1 - 0.5倍率
-DOMAIN-KEYWORD,chatgpt.com,🇸🇬 新加坡直连1 - 0.5倍率
+DOMAIN-KEYWORD,openai.com,🇸🇬 新加坡中转
+DOMAIN-KEYWORD,chatgpt.com,🇸🇬 新加坡中转
 
 # 其他国外服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Proxy/Proxy.list,🌐 国外服务
@@ -118,5 +118,5 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
 GEOIP,CN,DIRECT
 
-# 🏁 兜底
+# 兜底
 FINAL,🌐 国外服务
