--- a/策略组.conf
+++ b/策略组.conf
@@ -1,22 +1,20 @@
-# Shadowrocket: 2025-09-16 13:06:48
+# Shadowrocket: 2025-09-21 22:10:31
 [General]
-include = 无
 bypass-system = true
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
-dns-server = 223.5.5.5,119.29.29.29
+# 强制 DoH 解析通过节点
 doh-server = https://1.1.1.1/dns-query,https://8.8.8.8/dns-query
-fallback-dns-server = 1.0.0.1,8.8.4.4
-icmp-auto-reply = true
+fallback-dns-server = 127.0.0.1
+prefer-doh = true
+dns-fallback-system = false
+force-dns-over-proxy = true   # ✅ 核心：所有 DNS 请求都走代理
 update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/heads/main/%E7%AD%96%E7%95%A5%E7%BB%84.conf
 
 [Proxy Group]
-# 国内外大分类
-🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点,
+🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
 🔯 自动选择 = url-test, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, url=http://www.gstatic.com/generate_204,interval=300,tolerance=100
-🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点
+🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
 🌏 国内服务 = select, DIRECT
-
-# 功能分类
 📱 社交平台 = select, 🌐 国外服务, 🚀 节点选择, DIRECT
 🎮 游戏平台 = select, 🌐 国外服务, 🚀 节点选择
 🎬 流媒体 = select, 🌐 国外服务, 🇸🇬 新加坡, 🇯🇵 日本节点, 🇺🇸 美国节点, 🇬🇧 英国节点
@@ -27,37 +25,28 @@ update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/h
 🛑 广告拦截 = select, REJECT
 
 [Rule]
+DOMAIN-KEYWORD,hongxingyun.club,DIRECT
 DOMAIN-KEYWORD,douyinvod.com,DIRECT
 
 # 广告拦截
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,🛑 广告拦截
-# ========== 隐私追踪 & 数据上报阻止 ==========
-# 友盟 Umeng
 DOMAIN-SUFFIX,umeng.com,REJECT
 DOMAIN-SUFFIX,umengcloud.com,REJECT
 DOMAIN-KEYWORD,umeng,REJECT
-
-# TalkingData
 DOMAIN-SUFFIX,talkingdata.net,REJECT
 DOMAIN-KEYWORD,talkingdata,REJECT
-
-# 百度统计 & 广告
 DOMAIN-SUFFIX,hm.baidu.com,REJECT
 DOMAIN-SUFFIX,baidustatic.com,REJECT
 DOMAIN-KEYWORD,baiduads,REJECT
-
-# 阿里妈妈广告
 DOMAIN-SUFFIX,mmstat.com,REJECT
 DOMAIN-SUFFIX,adashx.ut.taobao.com,REJECT
-
-# 字节系广告（穿山甲 / 巨量引擎）
 DOMAIN-SUFFIX,pangolin-sdk-toutiao.com,REJECT
 DOMAIN-SUFFIX,bytedance.com,REJECT
 DOMAIN-SUFFIX,bytedance.net,REJECT
 DOMAIN-SUFFIX,byteoversea.com,REJECT
 DOMAIN-KEYWORD,ad.byted,REJECT
 
-# 国内流媒体（优先于 China.list）
+# 国内流媒体
 DOMAIN-SUFFIX,iqiyi.com,📺 国内流媒体
 DOMAIN-SUFFIX,letv.com,📺 国内流媒体
 DOMAIN-SUFFIX,sohu.com,📺 国内流媒体
@@ -74,8 +63,9 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
+GEOIP,CN,🌏 国内服务
 
-# 抖音国内直连（精简版）
+# 抖音国内直连
 DOMAIN-SUFFIX,douyin.com,DIRECT
 DOMAIN-SUFFIX,iesdouyin.com,DIRECT
 DOMAIN-SUFFIX,snssdk.com,DIRECT
@@ -93,7 +83,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Spotify/Spotify.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Emby/Emby.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Pandora/Pandora.list,🎬 流媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🇯🇵 日本直连1 - 0.5倍率
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🇯🇵 日本节点
 
 # 社交平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📱 社交平台
@@ -107,16 +97,15 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 # 开发平台（含 OpenAI）
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 开发平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,💻 开发平台
-DOMAIN-KEYWORD,openai.com,🇸🇬 新加坡中转
-DOMAIN-KEYWORD,chatgpt.com,🇸🇬 新加坡中转
+DOMAIN-KEYWORD,openai.com,🇺🇸 美国中转原生
+DOMAIN-KEYWORD,chatgpt.com,🇺🇸 美国中转原生
 
 # 其他国外服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Proxy/Proxy.list,🌐 国外服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global.list,🌐 国外服务
 
-# 局域网和国内 IP
+# 局域网
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
-GEOIP,CN,DIRECT
 
 # 兜底
 FINAL,🌐 国外服务
