Update platform selection for development and Apple services

--- a/策略组.conf
+++ b/策略组.conf
@@ -19,8 +19,8 @@ update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/h
 🎮 游戏平台 = select, 🌐 国外服务, 🚀 节点选择
 🎬 流媒体 = select, 🌐 国外服务, 🇸🇬 新加坡, 🇯🇵 日本节点, 🇺🇸 美国节点, 🇬🇧 英国节点
 📺 国内流媒体 = select, 🌏 国内服务, DIRECT
-💻 开发平台 = select, 🌐 国外服务, 🚀 节点选择
-🍎 苹果服务 = select, 🌏 国内服务, DIRECT, 🌐 国外服务
+💻 开发平台 = select, 🌐 国外服务, 🇨🇳 台湾, 🇯🇵 日本, 🇸🇬 新加坡
+🍎 苹果服务 = select, 🌏 国内服务, DIRECT
 📰 新闻阅读 = select, 🌐 国外服务, 🚀 节点选择
 🛑 广告拦截 = select, REJECT
 
