--- a/策略组.conf
+++ b/策略组.conf
@@ -10,6 +10,7 @@ force-dns-over-proxy = true
 update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/heads/main/%E7%AD%96%E7%95%A5%E7%BB%84.conf
 
 [Proxy Group]
+🤖 AI 服务 = select, 🇺🇸 美国
 🇺🇸 美国 = select, 🇺🇸 节点1, 🇺🇸 节点2
 🎬 YouTube = select, 🇯🇵 日本, 🇸🇬 新加坡, 🇺🇸 美国
 🌍 Google = auto, 🇺🇸 美国, 🇯🇵 日本, 🇸🇬 新加坡
@@ -41,7 +42,30 @@ DOMAIN,translate.googleapis.com,🇺🇸 美国
 DOMAIN,translate.google.cn,🇺🇸 美国
 DOMAIN-SUFFIX,googleapis.com,🇺🇸 美国
 DOMAIN-SUFFIX,clients.google.com,🇺🇸 美国
+############################
+# 🤖 AI Services (Force US)
+############################
 
+# --- OpenAI ---
+DOMAIN-SUFFIX,openai.com,🤖 AI 服务
+DOMAIN-SUFFIX,chatgpt.com,🤖 AI 服务
+DOMAIN-SUFFIX,oaiusercontent.com,🤖 AI 服务
+
+# --- Gemini / Bard ---
+DOMAIN,gemini.google.com,🤖 AI 服务
+DOMAIN,bard.google.com,🤖 AI 服务
+DOMAIN-SUFFIX,deepmind.google,🤖 AI 服务
+DOMAIN-SUFFIX,ai.google.dev,🤖 AI 服务
+
+# --- Claude (Anthropic) ---
+DOMAIN-SUFFIX,anthropic.com,🤖 AI 服务
+DOMAIN-SUFFIX,claude.ai,🤖 AI 服务
+
+# --- Microsoft Copilot ---
+DOMAIN-SUFFIX,copilot.microsoft.com,🤖 AI 服务
+DOMAIN-SUFFIX,bing.com,🤖 AI 服务
+DOMAIN-SUFFIX,bingapis.com,🤖 AI 服务
+DOMAIN-SUFFIX,edgeservices.bing.com,🤖 AI 服务
 ############################
 # YouTube
 ############################
