Modify DNS settings and add new proxy rules
Updated configuration for DNS settings and proxy rules.

--- a/策略组.conf
+++ b/策略组.conf
@@ -1,19 +1,16 @@
-# Shadowrocket: 2026-01-14
+# Shadowrocket: 2026-01-14 15:11:05
 [General]
 bypass-system = true
 skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
+# 强制 DoH 解析通过节点
 doh-server = https://1.1.1.1/dns-query,https://8.8.8.8/dns-query
 fallback-dns-server = 127.0.0.1
 prefer-doh = true
 dns-fallback-system = false
-force-dns-over-proxy = true
+force-dns-over-proxy = true   # ✅ 核心：所有 DNS 请求都走代理
 update-url = https://raw.githubusercontent.com/0596cyy-cyber/Shadowrocket/refs/heads/main/%E7%AD%96%E7%95%A5%E7%BB%84.conf
 
 [Proxy Group]
-🤖 AI 服务 = select, 🇺🇸 美国
-🇺🇸 美国 = select, 🇺🇸 节点1, 🇺🇸 节点2
-🎬 YouTube = select, 🇯🇵 日本, 🇸🇬 新加坡, 🇺🇸 美国
-🌍 Google = auto, 🇺🇸 美国, 🇯🇵 日本, 🇸🇬 新加坡
 🚀 节点选择 = select, 🔯 自动选择, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
 🔯 自动选择 = url-test, 🇭🇰 香港节点, 🇨🇳 台湾节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, url=http://www.gstatic.com/generate_204,interval=300,tolerance=100
 🌐 国外服务 = select, 🚀 节点选择, 🔯 自动选择, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新加坡, 🇺🇸 美国节点, 🇬🇧 英国节点
@@ -33,112 +30,80 @@ DOMAIN-KEYWORD,douyinvod.com,DIRECT
 
 # 广告拦截
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Advertising/Advertising.list,🛑 广告拦截
+DOMAIN-SUFFIX,umeng.com,REJECT
+DOMAIN-SUFFIX,umengcloud.com,REJECT
+DOMAIN-KEYWORD,umeng,REJECT
+DOMAIN-SUFFIX,talkingdata.net,REJECT
+DOMAIN-KEYWORD,talkingdata,REJECT
+DOMAIN-SUFFIX,hm.baidu.com,REJECT
+DOMAIN-SUFFIX,baidustatic.com,REJECT
+DOMAIN-KEYWORD,baiduads,REJECT
+DOMAIN-SUFFIX,mmstat.com,REJECT
+DOMAIN-SUFFIX,adashx.ut.taobao.com,REJECT
+DOMAIN-SUFFIX,pangolin-sdk-toutiao.com,REJECT
+DOMAIN-SUFFIX,bytedance.com,REJECT
+DOMAIN-SUFFIX,bytedance.net,REJECT
+DOMAIN-SUFFIX,byteoversea.com,REJECT
+DOMAIN-KEYWORD,ad.byted,REJECT
 
-############################
-# Google Translate / AI
-############################
-DOMAIN,translate.google.com,🇺🇸 美国
-DOMAIN,translate.googleapis.com,🇺🇸 美国
-DOMAIN,translate.google.cn,🇺🇸 美国
-DOMAIN-SUFFIX,googleapis.com,🇺🇸 美国
-DOMAIN-SUFFIX,clients.google.com,🇺🇸 美国
-############################
-# 🤖 AI Services (Force US)
-############################
-
-# --- OpenAI ---
-DOMAIN-SUFFIX,openai.com,🤖 AI 服务
-DOMAIN-SUFFIX,chatgpt.com,🤖 AI 服务
-DOMAIN-SUFFIX,oaiusercontent.com,🤖 AI 服务
-
-# --- Gemini / Bard ---
-DOMAIN,gemini.google.com,🤖 AI 服务
-DOMAIN,bard.google.com,🤖 AI 服务
-DOMAIN-SUFFIX,deepmind.google,🤖 AI 服务
-DOMAIN-SUFFIX,ai.google.dev,🤖 AI 服务
-
-# --- Claude (Anthropic) ---
-DOMAIN-SUFFIX,anthropic.com,🤖 AI 服务
-DOMAIN-SUFFIX,claude.ai,🤖 AI 服务
-
-# --- Microsoft Copilot ---
-DOMAIN-SUFFIX,copilot.microsoft.com,🤖 AI 服务
-DOMAIN-SUFFIX,bing.com,🤖 AI 服务
-DOMAIN-SUFFIX,bingapis.com,🤖 AI 服务
-DOMAIN-SUFFIX,edgeservices.bing.com,🤖 AI 服务
-############################
-# YouTube
-############################
-DOMAIN-SUFFIX,youtube.com,🎬 YouTube
-DOMAIN-SUFFIX,googlevideo.com,🎬 YouTube
-DOMAIN-SUFFIX,ytimg.com,🎬 YouTube
-DOMAIN-SUFFIX,youtubei.googleapis.com,🎬 YouTube
-
-############################
-# Google Login / Push
-############################
-DOMAIN,accounts.google.com,DIRECT
-DOMAIN-SUFFIX,ggpht.com,DIRECT
-DOMAIN-SUFFIX,gstatic.com,DIRECT
-
-############################
-# Google Maps / CN
-############################
-DOMAIN-SUFFIX,google.com.cn,DIRECT
-DOMAIN-SUFFIX,google.cn,DIRECT
-DOMAIN-SUFFIX,gstatic.cn,DIRECT
-
-############################
-# Google Other
-############################
-DOMAIN-SUFFIX,google.com,🌍 Google
-DOMAIN-SUFFIX,googleusercontent.com,🌍 Google
-
-############################
 # 国内流媒体
-############################
 DOMAIN-SUFFIX,iqiyi.com,📺 国内流媒体
+DOMAIN-SUFFIX,letv.com,📺 国内流媒体
+DOMAIN-SUFFIX,sohu.com,📺 国内流媒体
 DOMAIN-SUFFIX,youku.com,📺 国内流媒体
 DOMAIN-SUFFIX,bilibili.com,📺 国内流媒体
 DOMAIN-SUFFIX,mgtv.com,📺 国内流媒体
+DOMAIN-SUFFIX,acfun.cn,📺 国内流媒体
+DOMAIN-SUFFIX,fun.tv,📺 国内流媒体
+DOMAIN-SUFFIX,baofeng.com,📺 国内流媒体
 
-############################
-# Apple
-############################
+# 苹果服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,🍎 苹果服务
 
-############################
 # 国内服务
-############################
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/China/China.list,🌏 国内服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaIPs/ChinaIPs.list,🌏 国内服务
 GEOIP,CN,🌏 国内服务
 
-############################
+# 抖音国内直连
+DOMAIN-SUFFIX,douyin.com,DIRECT
+DOMAIN-SUFFIX,iesdouyin.com,DIRECT
+DOMAIN-SUFFIX,snssdk.com,DIRECT
+DOMAIN-SUFFIX,amemv.com,DIRECT
+DOMAIN-SUFFIX,muscdn.com,DIRECT
+
 # 国外流媒体
-############################
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Netflix/Netflix.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Disney/Disney.list,🎬 流媒体
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/YouTube/YouTube.list,🎬 流媒体
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/HBO/HBO.list,🎬 流媒体
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/PrimeVideo/PrimeVideo.list,🎬 流媒体
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/AppleTV/AppleTV.list,🎬 流媒体
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Hulu/Hulu.list,🎬 流媒体
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Spotify/Spotify.list,🎬 流媒体
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Emby/Emby.list,🎬 流媒体
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Pandora/Pandora.list,🎬 流媒体
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,🇯🇵 日本节点
 
-############################
 # 社交平台
-############################
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Telegram/Telegram.list,📱 社交平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Twitter/Twitter.list,📱 社交平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Facebook/Facebook.list,📱 社交平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Instagram/Instagram.list,📱 社交平台
 
-############################
-# 开发平台 / AI
-############################
+# 游戏平台
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Game/Game.list,🎮 游戏平台
+
+# 开发平台（含 OpenAI）
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Gemini/Gemini.list,💻 开发平台
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GitHub/GitHub.list,💻 开发平台
-DOMAIN-KEYWORD,openai.com,🇺🇸 美国
-DOMAIN-KEYWORD,chatgpt.com,🇺🇸 美国
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Google/Google.list,💻 开发平台
+DOMAIN-KEYWORD,openai.com,🇺🇸 美国中转原生
+DOMAIN-KEYWORD,chatgpt.com,🇺🇸 美国中转原生
 
-############################
-# 其他国外
-############################
+# 其他国外服务
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Proxy/Proxy.list,🌐 国外服务
+RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global.list,🌐 国外服务
 
 # 局域网
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Lan/Lan.list,DIRECT
